added authentication and trying to fix mobile view

--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -2,3 +2,4 @@ nav.js-menu.sliding-panel-content.sidebar
   ul
     li.links= link_to 'Feed', root_path
     li.links= link_to 'Add Picture', new_picture_path
+    li.links= link_to 'Logout', destroy_user_session_path, method: :delete
