--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -1,4 +1,5 @@
-button.js-menu-trigger.sliding-panel-button.fa.fa-arrow-right
+- if current_user
+  button.js-menu-trigger.sliding-panel-button.fa.fa-arrow-right
 
 = image_tag 'logo.png', id: 'stitch-sitch-logo'
 p.header-text THE REVOLUTIONARY NEW WAY TO WEAR AND SHARE
