changed to paperclip and added cool things

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,12 @@
 @import "pictures";
 @import "refills/*";
 
+#menu-button.sticky {
+   position: fixed;
+   top: 5;
+   z-index: 9999;
+}
+
 body {
   background-color: $base-background-color;
 }
