--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -1,5 +1,5 @@
 - if current_user
-  button.js-menu-trigger.sliding-panel-button.fa.fa-arrow-right
+  button.js-menu-trigger.sliding-panel-button.fa.fa-arrow-right#menu-button
 
 = image_tag 'logo.png', id: 'stitch-sitch-logo'
 p.header-text THE REVOLUTIONARY NEW WAY TO WEAR AND SHARE
