--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -4,3 +4,12 @@
   width: 50%;
   max-height: 600px;
 }
+
+#target {
+  img {
+    width: 300px;
+    height: 300px;
+    display: block;
+    margin: auto;
+  }
+}
